--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 		</plugins>
 	</build>
 		<dependencies>
-<!-- 		<dependency>
+<dependency>
   <groupId>com.solveurits</groupId>
   <artifactId>solveurAutomation</artifactId>
-  <version>0.1beta</version>
-</dependency> -->
+  <version>1.0</version>
+</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
