--- a/test-output/old/SolveurITSDemo/Demo2_Chatter.properties
+++ b/test-output/old/SolveurITSDemo/Demo2_Chatter.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Demo2_Chatter][SuiteResult context=Demo3_Chatter][SuiteResult context=Demo4_Chatter][SuiteResult context=Demo4_Opportunity]
+[SuiteResult context=Demo2_Chatter][SuiteResult context=Demo4_Opportunity][SuiteResult context=Demo4_Chatter]
