--- a/test-output/old/SolveurITSDemo/Demo3_Opportunity.properties
+++ b/test-output/old/SolveurITSDemo/Demo3_Opportunity.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Demo3_Opportunity][SuiteResult context=Demo4_Opportunity][SuiteResult context=Demo4_Chatter]
+[SuiteResult context=Demo3_Opportunity][SuiteResult context=Demo4_Chatter]
