--- a/test-output/old/SolveurITSDemo/Demo4_Opportunity.properties
+++ b/test-output/old/SolveurITSDemo/Demo4_Opportunity.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Demo4_Chatter][SuiteResult context=Demo4_Opportunity][SuiteResult context=Demo4_Account]
+[SuiteResult context=Demo3_Account][SuiteResult context=Demo3_Chatter][SuiteResult context=Demo4_Chatter][SuiteResult context=Demo4_Opportunity][SuiteResult context=Demo4_Account]
